style.css
/*
Theme Name: VR Practices and Youth
Author: Eric & Hyun Masiello
Version: 2.0.0
*/
@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('fonts/glyphicons-halflings-regular.eot');
  src:
    url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
    url('fonts/glyphicons-halflings-regular.woff2') format('woff2'),
    url('fonts/glyphicons-halflings-regular.woff') format('woff'),
    url('fonts/glyphicons-halflings-regular.ttf') format('truetype'),
    url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

html {
  font-size: 16px;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

/* == font and links == */
body {
  margin: 0;
  padding-top: 3.75rem;
  padding-bottom: 3.75rem;
}

body,
input,
textarea,
select {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 1em;
  font-weight: 300;
  line-height: 1.5;
  color: #444545;
}

input[type="text"],
input[type="email"],
textarea,
select {
  border: 1px grey solid;
  padding: 0.5rem;
  width: 100%;
  font-size: 1rem;
}

button,
input[type="submit"],
input[type="button"],
input[type="reset"] {
  background-color: white;
  border-radius: 3px;
  padding: 0.5em;
  border: none;
  color: #AD0737;
  font-size: 1.125rem;
  cursor: pointer;
}

p {
  margin-top: 0.5rem;
	margin-bottom: 1.25rem;
}

strong {
	font-weight: bold;
}

em {
	font-style: italic;
}

a {
	color: #025380;
	text-decoration: none;
}

a:hover {
	color: #1B75BC;
}

a:focus {
  outline: 1px dotted;
}

blockquote,
blockquote p {
  font-size: 1.125rem;
  font-style: italic;
}

hr {
  border: 0;
  border-top: 1px solid;
  color: #94A7BD;
}

h1, .h1,
h2, .h2,
.rpwe-title {
  font-family: 'Fjalla One', sans-serif;
  font-weight: 200;
}

h1, .h1 {
  font-size: 2.5rem;
  line-height: 1.2;
  margin: 0.5rem 0 1rem 0;
  text-transform: uppercase;
}

h2, .h2, .rpwe-title {
  font-size: 1.75rem;
  line-height: 1.3;
  margin: 2rem 0 0.5rem;
  text-transform: uppercase;
}

h2:first-child,
.h2:first-child {
  margin-top: 1.25rem;
}

h3, .h3, .lead {
  font-size: 1.25rem;
  line-height: 1.3;
  margin: 1.25rem 0 0.5rem;
  color: #58595B;
  font-weight: 500;
}

h4, .h4 {
  font-size: 1.25rem;
}

h5, .h5 {
  font-size: 1.125rem;
}

h6, .h6, #reply-title {
  font-size: 1rem;
  text-transform: uppercase;
}

#reply-title {
  margin-top: 0;
}

h1 > i,
h2 > i,
h3 > i,
h4 > i,
h5 > i,
h6 > i {
  margin-right: 0.625rem;
}

.page-title {
  padding-bottom: 1.5rem;
  border-bottom: 1px solid #94A7BD;
}

figure {
  margin: 0;
}

img {
  max-width: 100%;
  height: auto;
}

img.alignleft,
.alignleft {
  float: left;
  margin-right: 1.125rem;
}

img.alignright,
.alignright {
  float: right;
  margin-left: 1.125rem;
}

img.aligncenter,
.aligncenter,
img.alignnone,
.alignnone {
  display: block;
  margin: 0 auto;
  clear: both;
}

img.alignleft,
.alignleft,
img.alignright,
.alignright {
  display: inline;
}

img.alignleft, img.aligncenter, img.alignright {
  margin-bottom: 0.5rem;
}

.wp-caption {
  max-width: 100%;
}

.wp-caption-text {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.5;
  margin: 0.75rem 0 !important;
  font-style: italic;
}

.alignleft .wp-caption-text {
  text-align: left;
}

.alignright .wp-caption-text {
  text-align: right;
}

.aligncenter .wp-caption-text {
  text-align: center;
}

/*
 * Container
 */

.page-container {
  max-width: 65.5rem;
  margin: auto;
  padding: 0 0.625rem;
}

@media (min-width: 56rem) {
  .page-container {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

/*
 * Hero
 */
.hero {
  height: 12rem;
  background-image: url('public/img/hero-default.png');
  background-size: cover;
  background-repeat: no-repeat;
}

/* Used for hero images that have a featured image set in the post/page */
.hero-image {
  height: 23rem;
}

/*
 * Featured
 */

@media(min-width: 48rem) {
  .featured {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}

.featured > div {
  text-align: center;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  -ms-flex-preferred-size: 33.33333%;
      flex-basis: 33.33333%;
  padding: 1rem;
}

.featured a {
  color: #AD0737;
}

.featured a:hover {
  color: #C7315C;
}

.iconimage {
  fill: currentColor;
  max-width: 4rem;
  max-height: 4rem;
}

.featured h2 + p {
  margin-top: 0;
  padding-bottom: 0;
}

.featured-image > a {
  display: block;
}

/*
 * Site Header
 */

.site-header {
  position: relative;
  margin-bottom: 1rem;
}

/*
 * Logo
 */

.site-title {
  margin: 0;
  padding: 0;
}

.site-title > a[rel="home"] {
  background: url('public/img/vrandyouth.svg') no-repeat 0 center transparent;
  background-size: contain;
  display: block;
  text-indent: -9999px;
  height: 48px;
  width: 170px;
}

@media only screen and (min-width: 55em) {
  .site-title > a[rel="home"] {
    height: 55px;
    width: 200px;
  }
}

/*
 * Hamburger
 */
#mobile-nav-switch {
  display: block;
  position: absolute;
  width: 1.5rem;
  right: 0.625rem;
  top: 1rem;
}

@media (min-width: 56rem) {
  #mobile-nav-switch {
    display: none;
    position: absolute;
  }
}

.alter-menu-icon {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  background-image: url(public/img/alter-menu.png);
  background-position: 0 0;
  background-repeat: no-repeat;
  -webkit-transform: rotate(0deg);
          transform: rotate(0deg);
  transition: -webkit-transform 250ms ease-out 0s;
  transition: transform 250ms ease-out 0s;
  transition: transform 250ms ease-out 0s, -webkit-transform 250ms ease-out 0s;
}

.open .alter-menu-icon {
  background-position: 0 -24px;
  -webkit-transform: rotate(-180deg);
          transform: rotate(-180deg);
  transition: -webkit-transform 250ms ease-out 0s;
  transition: transform 250ms ease-out 0s;
  transition: transform 250ms ease-out 0s, -webkit-transform 250ms ease-out 0s;
}

/*
 * Primary Navigation 
 */

.menu-primary-menu-container {
  font-family: 'Fjalla One', sans-serif;
}
/* ... */

